--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,67 @@
-.section {
-  height: 100vh;
+@import '_common.less';
+
+
+.splash {
+  &-caption {
+
+  }
+
+  &-btn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25px;
+  }
+
+}
+
+.about {
+  margin-top: 150px;
+
+  &-btn-container {
+    margin-top: 50px;
+  }
+}
+
+.about-title {
+  margin-bottom: 50px;
+  &:before{
+    content: '';
+    display: block;
+    width: 150px;
+    height: 2px;
+    background: black;
+    position: absolute;
+    top: 75px;
+  }
+}
+
+.faq {
+  margin-top: 50px;
+
+  &-title {
+    &:before{
+      content: '';
+      display: block;
+      width: 150px;
+      height: 2px;
+      background: black;
+      position: absolute;
+      top: 35px;
+    }
+  }
+}
+
+.answer {
+
+  &-lg {
+    margin-bottom: 30px;
+  }
+}
+
+.leaves-1 {
+  position: absolute;
+  left: -170px;
+  transform: rotate(90deg) scale(2.5);
+
 }
