--- a/src/_common.less
+++ b/src/_common.less
@@ -2,7 +2,15 @@
 @grey: #a0a09f;
 @ghgreen: #54975b;
 
-button.btn {
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Comfortaa', cursive;
+}
+
+.btn {
   border-radius: 0;
   background-color: black;
   color: white;
