--- a/src/index.less
+++ b/src/index.less
@@ -2,12 +2,12 @@
 
 
 .splash {
+  text-align: center;
   &-caption {
 
   }
 
   &-btn {
-    display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 25px;
