--- a/src/_common.less
+++ b/src/_common.less
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 
   &-splash{
     /* The image used */
-    background-image: url("alpine-background.jpg");
+    background-image: url("alpine-background.jpeg");
   }
 
   &-fractal {
