--- a/src/index.less
+++ b/src/index.less
@@ -51,6 +51,7 @@
       height: 2px;
       background: black;
       position: absolute;
+      font-weight: 600;
       top: -25px;
     }
   }
@@ -61,7 +62,10 @@
   &-lg {
     margin-bottom: 30px;
   }
-  margin-bottom: 10px;
+}
+
+.question {
+  margin-top: 15px;
 }
 
 .leaves {
