--- a/src/registration.less
+++ b/src/registration.less
@@ -1,5 +1,8 @@
 @import '_common.less';
 
+
+@registrationgrey: #333;
+
 .participation-pic {
   height: 250px;
   margin: 10px;
@@ -23,4 +26,44 @@
 .registration-blurb {
   color: white;
 
+}
+
+:focus, .form-control:focus {
+  outline: none;
+}
+
+.form-input {
+  width: 100%;
+  border: 0;
+  padding: 7px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.effect ~ .focus-border {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: @ghgreen;
+  transition: 0.4s;
+}
+.effect:focus ~ .focus-border {
+  width: 100%;
+  transition: 0.4s;
+}
+
+.form-group {
+  position: relative;
+}
+
+input[type="text"], input[type="email"], input[type="tel"] {
+  color: @registrationgrey;
+  width: 100%;
+  box-sizing: border-box;
+  letter-spacing: 1px;
+}
+
+label {
+  color: @registrationgrey
 }
