--- a/src/sponsors.less
+++ b/src/sponsors.less
@@ -1,6 +1,6 @@
 @import '_common.less';
 
-.sponsors-title {
+.sponsor-title {
   color: white;
   font-family: 'Comfortaa', cursive;
   margin: 25px 5px;
@@ -8,17 +8,55 @@
 
 }
 
-.sponsor-pic {
-  height: 200px;
-  width: 200px;
-  margin: 10px 15px;
-
-}
-
-.sponsors-blurb {
+.sponsor-blurb {
   color: white;
 }
 
-.sponsors-container {
+.sponsor-container {
   margin-bottom: 20px;
+  position: relative;
+
+}
+
+.sponsor {
+  &-overlay {
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border-radius: 2px;
+
+    width: 100%;
+    top: 0;
+    left: 0;
+    transition: .5s ease;
+    background-color: @ghgreen;
+    opacity: 0;
+
+    color: white;
+
+  }
+
+  &-container:hover .sponsor-overlay {
+    opacity: 0.9;
+  }
+
+  &-pic {
+    width: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border-radius: 2px;
+    border: 1px solid white;
+  }
+  &-name {
+    color: white;
+    font-size: 16pt;
+    margin-top: 5px;
+    text-align: center;
+  }
 }
