--- a/src/registration.less
+++ b/src/registration.less
@@ -67,3 +67,7 @@ input[type="text"], input[type="email"], input[type="tel"] {
 label {
   color: @registrationgrey
 }
+
+#other {
+  display: none;
+}
