--- a/src/team.less
+++ b/src/team.less
@@ -19,13 +19,20 @@
     text-align: center;
   }
   &-pic {
-    width: 100%;
+    @media only screen and (min-width: 600px) {
+      width: 175px;
+    }
+    width: 100px;
     height: auto;
     margin-left: auto;
     margin-right: auto;
     display: block;
     border-radius: 2px;
     border: 1px solid white;
+  }
+
+  &-col {
+    margin: 5px 15px;
   }
 
   &-overlay {
