notes updates week 2

--- a/src/index.less
+++ b/src/index.less
@@ -26,6 +26,10 @@
   }
 }
 
+.theme {
+  margin-top: 100px;
+}
+
 .about-title {
   margin-bottom: 50px;
   &:before{
@@ -80,8 +84,19 @@
     top: -80px;
     transform: rotate(180deg) scale(1.5);
   }
+  &-3 {
+    position: absolute;
+    left: -200px;
+    transform: rotate(270deg) scale(1.5);
+  }
 }
 
 .overflow-x-hidden {
   overflow: hidden;
+}
+
+.theme-logo {
+  height: 100px;
+  display: inline-block;
+  margin-left: 10px;
 }
