--- a/src/team.less
+++ b/src/team.less
@@ -7,6 +7,8 @@
   }
 }
 
+
+
 .person {
   &-container {
     position: relative;
@@ -59,6 +61,16 @@
     opacity: 0.9;
   }
 
+}
+
+.board {
+  &-pic {
+    @media only screen and (min-width: 600px) {
+      width: 350px;
+    }
+    width: 300px;
+
+  }
 }
 
 .committee-title {
