final updates, see doc

--- a/src/index.less
+++ b/src/index.less
@@ -100,3 +100,12 @@
   display: inline-block;
   margin-left: 10px;
 }
+
+.thankyou-text {
+  color: white;
+}
+
+.title {
+  color: white;
+  margin-top: 15px;
+}
