--- a/src/index.less
+++ b/src/index.less
@@ -89,6 +89,11 @@
     left: -200px;
     transform: rotate(270deg) scale(1.5);
   }
+  &-4 {
+    position: absolute;
+    left: -150px;
+    transform: rotate(270deg) scale(0.75);
+  }
 }
 
 .overflow-x-hidden {
